crates/sid-widgets/tests/snapshots/ssh_render__ssh_connected_sftp.snap
---
source: crates/sid-widgets/tests/ssh_render.rs
expression: s
---
┌ Hosts (j/k Enter) ───────────┐┌ Status ──────────────────────────────────────┐
│> ● my-prod-server            ││● Connected to my-prod-server                 │
│                              │└──────────────────────────────────────────────┘
│                              │┌ SFTP ────────────────────────────────────────┐
│                              ││cwd: /var/log                                 │
│                              ││    syslog                                    │
│                              ││  / nginx                                     │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
└──────────────────────────────┘ (no recent commands)
