crates/sid-widgets/tests/snapshots/ssh_render__ssh_connecting.snap
---
source: crates/sid-widgets/tests/ssh_render.rs
expression: s
---
┌ Hosts ───────────────────────┐┌ Status ──────────────────────────────────────┐
│> ● my-prod-server            ││● Connecting to my-prod-server                │
│                              │└──────────────────────────────────────────────┘
│                              │┌ my-prod-server ──────────────────────────────┐
│                              ││Connecting to my-prod-server...               │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
└──────────────────────────────┘ (no recent commands)
