crates/sid-widgets/tests/snapshots/ssh_render__ssh_empty_host_list.snap
---
source: crates/sid-widgets/tests/ssh_render.rs
expression: s
---
┌ Hosts (j/k Enter) ───────────┐┌ Status ──────────────────────────────────────┐
│  (no hosts configured)       ││● Disconnected                                │
│                              │└──────────────────────────────────────────────┘
│                              │┌ Session ─────────────────────────────────────┐
│                              ││Select a host with j/k, Enter to connect.     │
│                              ││Tab toggles SFTP panel.                       │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
└──────────────────────────────┘ (no recent commands)
