crates/sid-widgets/tests/snapshots/ssh_render__ssh_pty_body_wide.snap
---
source: crates/sid-widgets/tests/ssh_render.rs
expression: s
---
┌ Hosts ───────────────────────────────────────────────────────────────────────┐┌ Status ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> ● my-prod-server                                                            ││● Connected to my-prod-server                                                                                         │
│                                                                              │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                                                                              │┌ my-prod-server ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                              ││XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX│
│                                                                              ││XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX│
│                                                                              ││XXXXXXXXXXXXXX                                                                                                        │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              ││                                                                                                                      │
│                                                                              │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
└──────────────────────────────────────────────────────────────────────────────┘ (no recent commands)
