crates/sid-widgets/tests/snapshots/ssh_render__ssh_three_hosts_second_selected.snap
---
source: crates/sid-widgets/tests/ssh_render.rs
expression: s
---
┌ Hosts ───────────────────────┐┌ Status ──────────────────────────────────────┐
│  ○ github.com (cfg)          ││● Disconnected                                │
│> ● my-prod-server            │└──────────────────────────────────────────────┘
│  ○ staging-bastion           │┌ my-prod-server ──────────────────────────────┐
│                              ││Select a host with j/k, Enter to connect.     │
│                              ││Tab toggles SFTP panel.                       │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              │└──────────────────────────────────────────────┘
└──────────────────────────────┘ (no recent commands)
